<resources>
    <string name="app_name">Redgram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_browser">Open in Browser</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_profile">Visit Profile</string>
    <string name="action_sub">Visit Subreddit</string>
    <string name="action_report">Report</string>
    <string name="user_name">atioxx</string>
    <string name="user_email">atiyaleb@gmail.com</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_profile">Profile</string>
    <string name="profile_about">About</string>
    <string name="profile_activity">Activity</string>
    <string name="fragment_inbox">Inbox</string>
    <string name="fragment_friends">Friends</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_subreddits">Subreddits</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_logout">Logout</string>
    <string name="fragment_about">About</string>
    <string name="password_constant">Password</string>
    <string name="about_dialog_title">About Redgram</string>
    <string name="about_dialog_content">
        Redgram is an open sourced Reddit Client for Android. It is a project that focuses on the
        user experience by providing a solid foundation of the basic use cases of Reddit along with
        other add-on features. The nature of this project being collaborative is to bring the
        best out of the experience creating this application while making sure that the user
        remains in the big picture.
    </string>
    <string name="dialog_close">Close</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_cache_loaded">Loading Cache</string>
    <string name="text_bullet">\u2022</string>
    <string name="post_tag_nsfw">NSFW</string>
    <string name="nsfw_material">NSFW material, click here to view</string>
    <string name="enter_search_term">Enter a Search Term</string>
    <string-array name="frontArray">
        <item>Hot</item>
        <item>New</item>
        <item>Rising</item>
        <item>Top</item>
        <item>Controversial</item>
    </string-array>
    <string-array name="searchSortArray">
        <item>Relevance</item>
        <item>New</item>
        <item>Top</item>
        <item>Hot</item>
        <item>Comments</item>
    </string-array>
    <string-array name="fromArray">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All</item>
    </string-array>
    <string-array name="shareOptions">
        <item>Link</item>
        <item>Comments</item>
    </string-array>
    <string-array name="profileListing">
        <item>Overview</item>
        <item>Comments</item>
        <item>Submitted</item>
        <item>Gilded</item>
        <item>Upvoted</item>
        <item>Downvoted</item>
        <item>Hidden</item>
        <item>Saved</item>
    </string-array>
    <string-array name="profileListingFilter">
        <item>Hot</item>
        <item>New</item>
        <item>Top</item>
        <item>Controversial</item>
    </string-array>
    <string name="default_filter">Hot</string>
    <string name="frontpage">Frontpage</string>
    <string name="return_frontpage">Return to Frontpage</string>
    <string name="default_subreddit_filter">Default</string>
    <string name="long_click_notice">Hold subreddit to view details</string>
    <string name="send_to">Share on..</string>
    <string name="title_activity_comments">Comments</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="local_cache_key">local_cache_key</string>
    <string name="main_data_key">main_data_key</string>
    <string name="main_data_position">main_data_position</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="no_text">no text provided, swipe for comments</string>
    <string name="load_more">Load More</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="item_hidden">Item Hidden</string>
    <string name="undo">Undo</string>
    <string name="add_an_account">Add an Account +</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string name="pref_header_posts">Posts</string>
    <string name="pref_header_comments">Comments</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_sync">Sync Options</string>
    <string name="pref_posts_min_score_title">Minimum post score</string>
    <string name="pref_posts_show_flair_title">Show post flair</string>
    <string name="pref_posts_num_title">Link count</string>
    <string name="pref_posts_media_title">Media</string>
    <string name="pref_posts_hide_ups_title">Hide upvoted links</string>
    <string name="pref_posts_hide_downs_title">Hide downvoted links</string>
    <string name="link_karma">Link Karma</string>
    <string name="comment_karma">Comment Karma</string>
    <string name="option_friends">Friends</string>
    <string name="option_blocked_users">Blocked Users</string>
</resources>