<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:fragment="com.matie.redgram.ui.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="com.matie.redgram.ui.settings.SettingsActivity$PostPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_posts" />

    <header
        android:fragment="com.matie.redgram.ui.settings.SettingsActivity$CommentsPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_comments" />

    <header
        android:fragment="com.matie.redgram.ui.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.matie.redgram.ui.settings.SettingsActivity$SyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_sync" />

</preference-headers>
