<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Main Content-->
        <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!--ActionBar Location-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme"
            android:background="@color/material_red400"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentInsetLeft="72dp"
            app:contentInsetStart="72dp"
            contentInsetLeft="72dp"
            contentInsetStart="72dp"
            android:elevation="4dp">

            <FrameLayout
                style="@style/Match"
                android:id="@+id/toolbar_child_view"></FrameLayout>


        </android.support.v7.widget.Toolbar>


    </RelativeLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->

    <com.matie.redgram.ui.common.utils.ScrimInsetsFrameLayout
        android:id="@+id/scrimInsetsFrameLayout"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start|left"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        app:insetForeground="#4000">

        <LinearLayout
            android:id="@+id/linearDrawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_blue_grey_950"
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <!--include fixed header of nav drawer-->
            <RelativeLayout
                android:id="@+id/userDrawerHeader"
                android:layout_width="@dimen/navigation_drawer_width"
                android:layout_height="@dimen/navigation_drawer_personal_data_layout_height">

                <ImageView
                    android:id="@+id/drawerUserImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/my_photo_for_drawer"/>

                <TextView
                    android:id="@+id/drawerUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@id/drawerUserImage"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium"/>

                <TextView
                    android:id="@+id/drawerUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/drawerUserName"
                    android:layout_below="@+id/drawerUserName"
                    android:text="@string/user_email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_micro"/>

            </RelativeLayout>

            <!--include custom NavDrawerView from layout dir-->
            <include
                android:id="@+id/navigationDrawerListViewWrapper"
                layout="@layout/navigation_drawer_list_view"/>

        </LinearLayout>

     </com.matie.redgram.ui.common.utils.ScrimInsetsFrameLayout>


</android.support.v4.widget.DrawerLayout>
